# corplink-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.proxy  build.rs
.github/workflows/: build-docker.yaml
assets/: start.sh  xray.json
config/: config.json
src/: client.rs  config.rs  dns.rs  main.rs  qrcode.rs  resp.rs  totp.rs  utils.rs  wg.rs
src/dns/: darwin.rs  linux.rs  mod.rs  win.rs
